--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "inquirer": "^8.2.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "sequelize": "^6.14.1"
