--- a/package.json
+++ b/package.json
@@ -23,12 +23,10 @@
   "dependencies": {
     "cli-color": "^2.0.1",
     "console.table": "^0.10.0",
-    "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "inquirer": "^8.2.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.15",
-    "sequelize": "^6.14.1"
+    "nodemon": "^2.0.15"
   }
 }
